--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <article class="review">
 
                 <div class="img-container">
-                    <img src="" alt="person" id="person-img">
+                    <img src="https://images.pexels.com/photos/91227/pexels-photo-91227.jpeg?cs=srgb&dl=pexels-stefan-stefancik-91227.jpg&fm=jpg" alt="person" id="person-img">
                 </div>
                 <h4 id="author">Teszt Elek</h4>
                 <p id="job">Javascript fejlesztő</p>
